# disco-quick

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: count.rs  print_json.rs
src/: artist.rs  artist_credit.rs  company.rs  label.rs  lib.rs  master.rs  parser.rs  reader.rs  release.rs  shared.rs  track.rs  util.rs  video.rs
